--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,9 +5,9 @@
 		// Uncomment the files containing the programs you need
 		// "docker-compose.docs.yml", // docs
 		// "docker-compose.website.yml", // grafana, website
+		// "docker-compose.db.yml", // mongodb
 
-		"docker-compose.yml",
-		"docker-compose.db.yml" // mongodb
+		"docker-compose.yml"
 	],
 	"forwardPorts": [
 		3000, // grafana
