--- a/.github/workflows/test_definitions.yml
+++ b/.github/workflows/test_definitions.yml
@@ -46,6 +46,7 @@ jobs:
       uses: actions/checkout@v4
       with:
           repository: UBCSailbot/sailbot_workspace
+          ref: user/hhenry01/enable-docker-ci
 
     - name: Checkout ROS package
       if: ${{ inputs.repository != 'sailbot_workspace' }}
@@ -63,12 +64,18 @@ jobs:
 
     - name: Start MongoDB
       if: ${{ inputs.repository != 'sailbot_workspace' && inputs.repository != 'custom_interfaces' }}
-      run: docker-compose -f ".devcontainer/docker-compose.ci.yml" up -d --build
+      # URL to mongosh command must match what is defined in sailbot_workspace/.devcontainer/.docker-compose.ci.yml
+      run: docker compose -f .devcontainer/docker-compose.ci.yml up -d && docker compose -f .devcontainer/docker-compose.ci.yml run sailbot-workspace mongosh "mongodb://root:rootpassword@127.0.0.1:27017"
+
+    # - name: Get MongoDB Connection String
+    #   if: ${{ inputs.repository != 'sailbot_workspace' && inputs.repository != 'custom_interfaces' }}
+    #   run: docker network ls && docker network inspect devcontainer_default && echo "MONGODB_CONN_STR=mongodb://$(docker network inspect devcontainer_default | grep mongodb -A 3 | grep IPv4Address | cut -d "\"" -f 4 | cut -d "/" -f 1):27017" >> $GITHUB_ENV
 
     - name: Test
       uses: ./.github/actions/test/
       env:
         DISABLE_VCS: ${{ inputs.repository != 'sailbot_workspace' }}
+        # MONGODB_CONN_STR: $MONGODB_CONN_STR
 
     - name: Stop MongoDB
       if: ${{ inputs.repository != 'sailbot_workspace' && inputs.repository != 'custom_interfaces' }}
