Revert port forwarding changes

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,8 +12,7 @@
 	"forwardPorts": [
 		3000, // grafana
 		3005, // website
-		8000, // docs
-		27017 // db
+		8000  // docs
 	],
 	"service": "sailbot-workspace",
 	"workspaceFolder": "/workspaces/sailbot_workspace",
