--- a/.github/actions/checkout/action.yml
+++ b/.github/actions/checkout/action.yml
@@ -9,11 +9,6 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Checkout workspace
-      uses: actions/checkout@v4
-      with:
-          repository: UBCSailbot/sailbot_workspace
-
     - name: Checkout ROS package
       if: ${{ inputs.repository != 'sailbot_workspace' }}
       uses: actions/checkout@v4
@@ -22,7 +17,7 @@ runs:
           path: src/${{ inputs.repository }}
 
     - name: Checkout custom_interfaces ROS package
-      if: ${{ inputs.repository != 'sailbot_workspace' && inputs.repository != 'custom_interfaces' }}
+      # if: ${{ inputs.repository != 'sailbot_workspace' && inputs.repository != 'custom_interfaces' }}
       uses: actions/checkout@v4
       with:
           repository: UBCSailbot/custom_interfaces
