--- a/.github/workflows/test_definitions.yml
+++ b/.github/workflows/test_definitions.yml
@@ -47,19 +47,10 @@ jobs:
       with:
           repository: UBCSailbot/sailbot_workspace
 
-    - name: Checkout ROS package
-      if: ${{ inputs.repository != 'sailbot_workspace' }}
-      uses: actions/checkout@v4
+    - name: Checkout repositories
+      uses: ./.github/actions/checkout/
       with:
-          repository: UBCSailbot/${{ inputs.repository }}
-          path: src/${{ inputs.repository }}
-
-    - name: Checkout custom_interfaces ROS package
-      if: ${{ inputs.repository != 'sailbot_workspace' && inputs.repository != 'custom_interfaces' }}
-      uses: actions/checkout@v4
-      with:
-          repository: UBCSailbot/custom_interfaces
-          path: src/custom_interfaces
+          repository: ${{ inputs.repository }}
 
     - name: Test
       uses: ./.github/actions/test/
@@ -101,19 +92,10 @@ jobs:
       with:
           repository: UBCSailbot/sailbot_workspace
 
-    - name: Checkout ROS package
-      if: ${{ inputs.repository != 'sailbot_workspace' }}
-      uses: actions/checkout@v4
+    - name: Checkout repositories
+      uses: ./.github/actions/checkout/
       with:
-          repository: UBCSailbot/${{ inputs.repository }}
-          path: src/${{ inputs.repository }}
-
-    - name: Checkout custom_interfaces ROS package
-      if: ${{ inputs.repository != 'sailbot_workspace' && inputs.repository != 'custom_interfaces' }}
-      uses: actions/checkout@v4
-      with:
-          repository: UBCSailbot/custom_interfaces
-          path: src/custom_interfaces
+          repository: ${{ inputs.repository }}
 
     - name: Run linter
       uses: ./.github/actions/clang-tidy/
