--- a/.github/actions/test/action.yml
+++ b/.github/actions/test/action.yml
@@ -3,9 +3,9 @@ description: 'Test using devcontainer'
 runs:
   using: "composite"
   steps:
-    - name: List
+    - name: Print working directory
       shell: bash
-      run: ls
+      run: pwd
 
     - name: Build
       shell: bash
