--- a/.github/actions/docker-compose.ci.yml
+++ b/.github/actions/docker-compose.ci.yml
@@ -5,8 +5,8 @@ version: '3.8'
 services:
   sailbot-workspace:
     build:
-      context: .
-      dockerfile: ../../.devcontainer/Dockerfile
+      context: ../../.devcontainer
+      dockerfile: Dockerfile
     volumes:
       - ../..:/workspaces/sailbot_workspace:cached
 
