--- a/.github/workflows/test_definitions.yml
+++ b/.github/workflows/test_definitions.yml
@@ -46,6 +46,7 @@ jobs:
       uses: actions/checkout@v4
       with:
           repository: UBCSailbot/sailbot_workspace
+          ref: patrick-5546/refactor-ci
 
     - name: Checkout repositories
       uses: ./.github/actions/checkout/
@@ -71,6 +72,7 @@ jobs:
       uses: actions/checkout@v4
       with:
           repository: UBCSailbot/sailbot_workspace
+          ref: patrick-5546/refactor-ci
 
     - name: Checkout repositories
       uses: ./.github/actions/checkout/
@@ -91,6 +93,7 @@ jobs:
       uses: actions/checkout@v4
       with:
           repository: UBCSailbot/sailbot_workspace
+          ref: patrick-5546/refactor-ci
 
     - name: Checkout repositories
       uses: ./.github/actions/checkout/
