--- a/.github/actions/ament-lint/action.yml
+++ b/.github/actions/ament-lint/action.yml
@@ -1,5 +1,14 @@
 name: 'Ament Lint'
 description: 'Ament Lint using devcontainer'
+
+inputs:
+  linter:
+    description: 'The linter to run'
+    required: true
+  disable_vcs:
+    description: 'Whether to disable VCS cloning all repositories'
+    required: true
+
 runs:
   using: "composite"
   steps:
@@ -13,4 +22,4 @@ runs:
 
     - name: Run Tests
       shell: bash
-      run: docker-compose -f .github/actions/docker-compose.ci.yml exec -T sailbot-workspace /bin/bash -c "cd /workspaces/sailbot_workspace && .github/actions/ament-lint/run.sh"
+      run: docker-compose -f .github/actions/docker-compose.ci.yml exec -T sailbot-workspace /bin/bash -c "LINTER=${{ inputs.linter}} && DISABLE_VCS=${{ inputs.disable_vcs }} && cd /workspaces/sailbot_workspace && .github/actions/ament-lint/run.sh"
