--- a/.github/actions/test/action.yml
+++ b/.github/actions/test/action.yml
@@ -1,16 +1,22 @@
 name: 'Test'
 description: 'Test using devcontainer'
+
+inputs:
+  disable_vcs:
+    description: 'Whether to disable VCS cloning all repositories'
+    required: true
+
 runs:
   using: "composite"
   steps:
     - name: Build Containers
       shell: bash
-      run: docker-compose -f .github/actions/docker-compose.ci.yml -f .github/actions/docker-compose.ci.website.yml build
+      run: docker-compose -f .github/actions/docker-compose.ci.yml -f .github/actions/docker-compose.ci.db.yml build
 
     - name: Run Containers
       shell: bash
-      run: docker-compose -f .github/actions/docker-compose.ci.yml -f .github/actions/docker-compose.ci.website.yml up -d
+      run: docker-compose -f .github/actions/docker-compose.ci.yml -f .github/actions/docker-compose.ci.db.yml up -d
 
     - name: Run Tests
       shell: bash
-      run: docker-compose -f .github/actions/docker-compose.ci.yml -f .github/actions/docker-compose.ci.website.yml exec -T sailbot-workspace /bin/bash -c "cd /workspaces/sailbot_workspace && .github/actions/test/run.sh"
+      run: docker-compose -f .github/actions/docker-compose.ci.yml -f .github/actions/docker-compose.ci.db.yml exec -T sailbot-workspace /bin/bash -c "export DISABLE_VCS=${{ inputs.disable_vcs }} && cd /workspaces/sailbot_workspace && .github/actions/test/run.sh"
