--- a/.github/actions/docker-compose.ci.yml
+++ b/.github/actions/docker-compose.ci.yml
@@ -7,6 +7,8 @@ services:
     build:
       context: ../../.devcontainer
       dockerfile: Dockerfile
+    environment:
+      - MONGODB_CONN_STR=mongodb://localhost:27017
     volumes:
       - ../..:/workspaces/sailbot_workspace:cached
 
