--- a/.devcontainer/docker-compose.ci.yml
+++ b/.devcontainer/docker-compose.ci.yml
@@ -5,7 +5,7 @@ version: '3.8'
 services:
   sailbot-workspace:
     build:
-      context: ../../.devcontainer
+      context: .
       dockerfile: Dockerfile
     environment:
       - MONGODB_CONN_STR=mongodb://localhost:27017
