Fix volume path

--- a/.devcontainer/docker-compose.ci.yml
+++ b/.devcontainer/docker-compose.ci.yml
@@ -10,7 +10,7 @@ services:
     environment:
       - MONGODB_CONN_STR=mongodb://localhost:27017
     volumes:
-      - ../..:/workspaces/sailbot_workspace:cached
+      - ..:/workspaces/sailbot_workspace:cached
 
     # Overrides default command so things don't shut down after the process ends.
     command: sleep infinity
