--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -25,11 +25,15 @@
 		"codespaces": {
 			"repositories": {
 				"UBCSailbot/boat_simulator": {"permissions": "write-all"},
+				"UBCSailbot/controller": {"permissions": "write-all"},
 				"UBCSailbot/custom_interfaces": {"permissions": "write-all"},
 				"UBCSailbot/docs": {"permissions": "write-all"},
 				"UBCSailbot/local_pathfinding": {"permissions": "write-all"},
 				"UBCSailbot/network_systems": {"permissions": "write-all"},
-				"UBCSailbot/website": {"permissions": "write-all"}
+				"UBCSailbot/notebooks": {"permissions": "write-all"},
+				"UBCSailbot/raye-local-pathfinding": {"permissions": "write-all"},
+				"UBCSailbot/website": {"permissions": "write-all"},
+				"UBCSailbot/virtual_iridium": {"permissions": "write-all"}
 			}
 		},
 		"vscode": {
