Add cucumber.js extension for website tests

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -67,6 +67,7 @@
 				"ms-python.vscode-pylance",
 				"ms-vsliveshare.vsliveshare",
 				"njpwerner.autodocstring",
+				"stevejpurves.cucumber",
 				"streetsidesoftware.code-spell-checker",
 				"vscode-icons-team.vscode-icons",
 				"zxh404.vscode-proto3"
