--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -83,6 +83,7 @@
 				"ms-toolsai.jupyter",
 				"ms-vsliveshare.vsliveshare",
 				"njpwerner.autodocstring",
+				"stevejpurves.cucumber",
 				"streetsidesoftware.code-spell-checker",
 				"vscode-icons-team.vscode-icons",
 				"zxh404.vscode-proto3"
