--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,7 @@
 	"name": "Sailbot Workspace",
 	"dockerComposeFile": [
 		// Uncomment the files containing the programs you need
-		// "docker-compose.db.yml", // mongodb
+		"docker-compose.db.yml", // mongodb
 		// "docker-compose.docs.yml", // docs
 		// "docker-compose.website.yml", // grafana, website
 
