Configure mypy in workspace (#156)
* Add mypy type checker

* Create type checking vscode task and remove mypy extension

* Modify mypy task to lint entire ROS packages rather than a single file

* Specify interpreter path for python extensions (#155)

* Add path to python interpreter for black formatter

* Add python interpreter path to isort and flake8 config

* Format all Python strings to be double quotes (#158)

* Add github copilot extension (#159)

* Delete deprecated python setting

* Enable mypy extension

* Add mypy task TODO

* Install ament_mypy

* Add mypy to CI

* Update TODO

* Fix mypy CI

* Uncomment mypy task

* Update base-dev image tag

* Create mypy vscode tasks for each python pkg

* Add mypy global_launch task

* Fix global_launch mypy error

* Loop over valid sub directories

* Fix ament linter script

* Uses CI script in tasks

* Exit with error if any lint run has errors

---------

Co-authored-by: Patrick Creighton <pcreighton429@gmail.com>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -82,6 +82,7 @@
 				"ms-python.vscode-pylance",
 				"ms-toolsai.jupyter",
 				"ms-vsliveshare.vsliveshare",
+				"ms-python.mypy-type-checker",
 				"njpwerner.autodocstring",
 				"stevejpurves.cucumber",
 				"streetsidesoftware.code-spell-checker",
