--- a/src/global_launch/config/globals.yaml
+++ b/src/global_launch/config/globals.yaml
@@ -6,31 +6,31 @@
 # boat_simulator parameters
 low_level_control_node:
    ros__parameters:
-      logging_throttle_period_sec: 2.0
+      logging_throttle_period_sec: 2.0 # [0, MAX_DOUBLE]
       rudder:
          disable_actuation: false
-         fixed_angle_deg: 0.0 # Only used if rudder actuation is disabled
-         actuation_request_period_sec: 10.0
-         actuation_execution_period_sec: 0.5
+         fixed_angle_deg: 0.0 # Only used if rudder actuation is disabled: [0, 360.0]
+         actuation_request_period_sec: 10.0 # [0, MAX_DOUBLE]
+         actuation_execution_period_sec: 0.5 # [0, MAX_DOubLE]
          pid: # Only used if rudder actuation is enabled
-            kp: 0.0
-            ki: 0.0
-            kd: 0.0
-            buffer_size: 50
+            kp: 0.0 # [0, MAX_DOUBLE]
+            ki: 0.0 # [0, MAX_DOUBLE]
+            kd: 0.0 # [0, MAX_DOUBLE]
+            buffer_size: 50 # [0, MAX_INT]
       wingsail:
          disable_actuation: false
-         fixed_angle_deg: 0.0 # Only used if actuation is disabled
-         actuation_request_period_sec: 10.0
-         actuation_execution_period_sec: 0.5
-         actuation_speed_deg_per_sec: 0.1 # Only used if actuation is enabled
+         fixed_angle_deg: 0.0 # Only used if actuation is disabled: [0, 360.0]
+         actuation_request_period_sec: 10.0 # [0, MAX_FLOAT]
+         actuation_execution_period_sec: 0.5 # [0, MAX_FLOAT]
+         actuation_speed_deg_per_sec: 0.1 # Only used if actuation is enable: [0, MAX_FLOAT]
 physics_engine_node:
    ros__parameters:
-      logging_throttle_period_sec: 2.0
+      logging_throttle_period_sec: 2.0 # [0, MAX_DOUBLE]
       wind_sensor:
          generator_type: gaussian # One of "gaussian", "constant"
          gaussian_params:
-            mean: [1.0, 0.0] # Mean for x and y components
-            std_dev: [0.1, 0.1] # Standard deviation for x and y components
-            corr_xy: 0.0
+            mean: [1.0, 0.0] # Mean for x and y components: [MIN_DOUBLE, MAX_DOUBLE] for x, y
+            std_dev: [0.1, 0.1] # Standard deviation for x and y components: [0, MAX_DOUBLE] for x, y
+            corr_xy: 0.0 # [-1, 1]
          constant_params:
-            value: [1.0, 0.0] # Constant value for x and y components
+            value: [1.0, 0.0] # Constant value for x and y components: [MIN_DOUBLE, MAX_DOUBLE]
