--- a/src/global_launch/config/globals.yaml
+++ b/src/global_launch/config/globals.yaml
@@ -2,3 +2,42 @@
    ros__parameters:
       # Publishers' period (seconds): how often the publishers publish
       pub_period_sec: 0.5
+
+# boat_simulator parameters
+low_level_control_node:
+   ros__parameters:
+      logging_throttle_period_sec: 2.0
+      info_log_throttle_period_sec: 2.0
+      qos_depth: 1
+      rudder:
+         disable_actuation: false
+         fixed_angle_deg: 0.0
+         actuation_execution_period_sec: 0.5
+         pid:
+            kp: 0.0
+            ki: 0.0
+            kd: 0.0
+            buffer_size: 50
+      wingsail:
+         disable_actuation: false
+         fixed_angle_deg: 0.0
+         actuation_execution_period_sec: 0.5
+         actuation_speed_deg_per_sec: 0.1
+physics_engine_node:
+   ros__parameters:
+      logging_throttle_period_sec: 2.0
+      info_log_throttle_period_sec: 2.0
+      action_send_goal_timeout_sec: 2.0
+      qos_depth: 1
+      rudder:
+         actuation_request_period_sec: 10.0
+      wingsail:
+         actuation_request_period_sec: 10.0
+      wind_sensor:
+         generator_type: gaussian
+         gaussian_params:
+            mean: [1.0, 0.0]
+            std_dev: [0.1, 0.1]
+            corr_xy: 0.
+         constant_params:
+            value: [1.0, 0.0]
