--- a/.github/workflows/test_definitions.yml
+++ b/.github/workflows/test_definitions.yml
@@ -149,3 +149,17 @@ jobs:
           gh run watch -R UBCSailbot/docs $(gh run list -R UBCSailbot/docs -w tests.yml -L1 --json databaseId --jq '.[0].databaseId')
     env:
       GH_TOKEN: ${{ secrets.gh-token }}
+
+  # Runs Sailbot Workspace CI
+  run-sailbot-workspace-ci:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main' && inputs.repository != 'sailbot_workspace' && inputs.repository != 'docs'
+    steps:
+    - name: Dispatch Sailbot Workspace Tests workflow to run CI
+      # https://github.com/orgs/community/discussions/26323#discussioncomment-5600001
+      run: |
+          gh workflow run tests.yml -R UBCSailbot/sailbot_workspace
+          sleep 5
+          gh run watch -R UBCSailbot/sailbot_workspace $(gh run list -R UBCSailbot/sailbot_workspace -w tests.yml -L1 --json databaseId --jq '.[0].databaseId')
+    env:
+      GH_TOKEN: ${{ secrets.gh-token }}
