--- a/.github/workflows/test_definitions.yml
+++ b/.github/workflows/test_definitions.yml
@@ -46,6 +46,7 @@ jobs:
       uses: actions/checkout@v4
       with:
           repository: UBCSailbot/sailbot_workspace
+          ref: patrick-5546/fix-virtual-iridium
 
     - name: Checkout repositories
       uses: ./.github/actions/checkout/
