--- a/.github/workflows/test_definitions.yml
+++ b/.github/workflows/test_definitions.yml
@@ -38,10 +38,28 @@ on:
         required: false
 
 jobs:
+  metadata:
+    name: Extract metadata
+    runs-on: ubuntu-latest
+    permissions:
+      actions: read
+    outputs:
+      caller-sha: ${{ steps.workflows-ref.outputs.caller-sha }}
+    steps:
+      - name: Get workflow reference
+        id: workflows-ref
+        run: |
+          sha=$(curl -L -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.gh-token }}" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/<owner>/<repo>/actions/runs/${{ github.run_id }} | jq -r '.referenced_workflows[0] | .sha')
+          echo "caller-sha=$sha" >> $GITHUB_OUTPUT
+
   colcon-test:
     runs-on: ubuntu-latest
     if: ${{ inputs.ros-ci }}
+    needs: [metadata]
     steps:
+    - name: Print ref
+      run: echo ${{ needs.metadata.outputs.caller-sha }}
+
     - name: Checkout workspace
       uses: actions/checkout@v4
       with:
