--- a/.github/workflows/test_definitions.yml
+++ b/.github/workflows/test_definitions.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Get workflow reference
         id: workflows-ref
         run: |
-          sha=$(curl -L -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.gh-token }}" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/<owner>/<repo>/actions/runs/${{ github.run_id }} | jq -r '.referenced_workflows[0] | .sha')
+          sha=$(curl -L -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.gh-token }}" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/UBCSailbot/sailbot_workspace/actions/runs/${{ github.run_id }} | jq -r '.referenced_workflows[0] | .sha')
           echo "caller-sha=$sha" >> $GITHUB_OUTPUT
 
   colcon-test:
