--- a/.github/workflows/test_definitions.yml
+++ b/.github/workflows/test_definitions.yml
@@ -51,8 +51,8 @@ jobs:
         id: workflows-ref
         run: |
           ref=$(curl -L -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.gh-token }}" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/UBCSailbot/${{ inputs.repository }}/actions/runs/${{ github.run_id }} | jq -r '.referenced_workflows[0] | .ref')
-          echo "caller-ref=$ref"
           echo "caller-ref=$ref" >> $GITHUB_OUTPUT
+          echo "ref=$ref"
 
   colcon-test:
     runs-on: ubuntu-latest
