--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,4 +27,4 @@ jobs:
     # 1. Create the repository secret PAT_TOKEN (copy from Bitwarden)
     # 2. Uncomment the 2 lines below
     secrets:
-      gh-token: ${{ secrets.PAT_TOKEN }}
+      PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
