--- a/.github/workflows/test_definitions.yml
+++ b/.github/workflows/test_definitions.yml
@@ -210,7 +210,7 @@ jobs:
           github-token: "${{ secrets.PAT_TOKEN }}"
       - name: Enable auto-merge and approve PR
         run: |
-          gh pr merge --auto --merge "$PR_URL"
+          gh pr merge --auto --squash "$PR_URL"
           gh pr review --approve "$PR_URL"
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
