Add support for jupyter notebooks

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
-FROM ghcr.io/ubcsailbot/sailbot_workspace/dev:rapid
+FROM ghcr.io/ubcsailbot/sailbot_workspace/dev:jupyter
 
 # Copy configuration files (e.g., .vimrc) from config/ to the container's home directory
 ARG USERNAME=ros
@@ -16,4 +16,3 @@ COPY --chown=${USERNAME}:${USERNAME} config ${HOME}
 #     && apt-get autoremove -y \
 #     && apt-get clean -y \
 #     && rm -rf /var/lib/apt/lists/{apt,dpkg,cache,log} /tmp/* /var/tmp/*
-# ENV DEBIAN_FRONTEND=
