--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -70,6 +70,7 @@
 				"github.copilot",
 				"github.vscode-github-actions",
 				"Gruntfuggly.todo-tree",
+				"jebbs.plantuml",
 				"jeff-hykin.better-cpp-syntax",
 				"KevinRose.vsc-python-indent",
 				"llvm-vs-code-extensions.vscode-clangd",
