--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ src/*
 .cache/
 compile_commands.json
 
+# microsoft c/c++ intellisense (disabled in favor of clangd)
+.vscode/c_cpp_properties.json
+
 # python
 __pycache__/
 .mypy_cache/
