--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,19 @@
 # ros
-build/
-install/
-log/
+/build/
+/install/
+/log/
 
 # vcstool packages
-src/*
-!src/global_launch
-!src/polaris.repos
+/src/*
+!/src/global_launch
+!/src/polaris.repos
 
 # configuration files
-.devcontainer/config/*
-!.devcontainer/config/README.md
+/.devcontainer/config/*
+!/.devcontainer/config/README.md
 
 # clangd
 .cache/
-compile_commands.json
 
 # microsoft c/c++ intellisense (disabled in favor of clangd)
 /.vscode/c_cpp_properties.json
@@ -23,3 +22,6 @@ compile_commands.json
 __pycache__/
 .mypy_cache/
 .pytest_cache/
+
+# exported plantuml diagrams
+/diagrams/out/
