--- a/.github/workflows/test_definitions.yml
+++ b/.github/workflows/test_definitions.yml
@@ -137,17 +137,33 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 1
     if: ${{ inputs.markdown-ci }}
+    needs: [extract-metadata]
     steps:
-    - name: Check out code
+    - name: Checkout workspace
       uses: actions/checkout@v4
       with:
-          repository: UBCSailbot/${{ inputs.repository }}
+          repository: UBCSailbot/sailbot_workspace
+          ref: ${{ needs.extract-metadata.outputs.caller-ref }}
 
-    - name: Run linter
+    - name: Checkout repositories
+      uses: ./.github/actions/checkout/
+      with:
+          repository: ${{ inputs.repository }}
+
+    - name: Run linter in workspace
       uses: nosborn/github-action-markdown-cli@v3.3.0
+      if: inputs.repository == 'sailbot_workspace'
       with:
         config_file: .markdownlint.json
         files: .
+        dot: true
+
+    - name: Run linter not in workspace
+      uses: nosborn/github-action-markdown-cli@v3.3.0
+      if: inputs.repository != 'sailbot_workspace'
+      with:
+        config_file: .markdownlint.json
+        files: src/${{ inputs.repository }}
         dot: true
 
   # https://github.com/gaurav-nelson/github-action-markdown-link-check
@@ -155,17 +171,32 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 1
     if: ${{ inputs.markdown-ci }}
+    needs: [extract-metadata]
     steps:
-    - name: Check out code
+    - name: Checkout workspace
       uses: actions/checkout@v4
       with:
           repository: UBCSailbot/sailbot_workspace
+          ref: ${{ needs.extract-metadata.outputs.caller-ref }}
 
-    - name: Run linter
+    - name: Checkout repositories
+      uses: ./.github/actions/checkout/
+      with:
+          repository: ${{ inputs.repository }}
+
+    - name: Run linter in workspace
       uses: gaurav-nelson/github-action-markdown-link-check@v1
+      if: inputs.repository == 'sailbot_workspace'
       with:
         config-file: .markdown-link-check.json
         folder-path: .
+
+    - name: Run linter not in workspace
+      uses: gaurav-nelson/github-action-markdown-link-check@v1
+      if: inputs.repository != 'sailbot_workspace'
+      with:
+        config-file: .markdown-link-check.json
+        folder-path: src/${{ inputs.repository }}
 
   # Rebuilds our docs site https://ubcsailbot.github.io/docs/
   rebuild-docs:
