--- a/src/global_launch/config/globals.yaml
+++ b/src/global_launch/config/globals.yaml
@@ -2,6 +2,11 @@
    ros__parameters:
       # Publishers' period (seconds): how often the publishers publish
       pub_period_sec: 0.5
+# mock_global_path parameters
+node_mock_global_path:
+   ros__parameters:
+      global_path_filepath: "/workspaces/sailbot_workspace/src/local_pathfinding/global_paths/mock_global_path.csv"
+      interval_spacing: 30.0
 
 # boat_simulator parameters
 low_level_control_node:
