--- a/src/global_launch/config/globals.yaml
+++ b/src/global_launch/config/globals.yaml
@@ -1,7 +1,14 @@
+# global parameters
 /**:
    ros__parameters:
       # Publishers' period (seconds): how often the publishers publish
       pub_period_sec: 0.5
+
+# local_pathfinding parameters
+mgp_main:
+   ros__parameters:
+      global_path_filepath: "/workspaces/sailbot_workspace/src/local_pathfinding/global_paths/mock_global_path.csv"
+      interval_spacing: 30.0
 
 # boat_simulator parameters
 low_level_control_node:
