--- a/src/global_launch/config/globals.yaml
+++ b/src/global_launch/config/globals.yaml
@@ -43,7 +43,7 @@ physics_engine_node:
             value: [1.0, 0.0]
 data_collection_node:
    ros__parameters:
-      file_name: 'data_collection_test'
+      file_name: 'ros_data_collection'
       qos_depth: 10
       # Define topics to subscribe to in the format ['topic_name', 'topic_type']
       topics: ['/mock_gps', 'GPS', '/mock_wind_sensors', 'WindSensors']
